# madruga

./: Cargo.toml  README.md
examples/: simple.rs  with_attempt.rs  with_attempt_and_logger.rs
src/: backoff.rs  lib.rs  logger.rs  macros.rs  retry.rs
tests/: retry_tests.rs
